# ExampleShowHow2Cmake

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/api/: CMakeLists.txt  helloapi.cpp  helloapi.h
src/hello/: CMakeLists.txt  main.cpp
