ADD_EXECUTABLE(hello main.cpp)
SET(EXECUTALE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

MESSAGE(STATUS ${PROJECT_SOURCE_DIR})

INSTALL(DIRECTORY ${PROJECT_BINARY_DIR}/bin/hello 
	DESTINATION app/bin/
	PATTERN * 
	PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
GROUP_EXECUTE GROUP_READ)

###设置头文件搜索路径
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/extras/include)
###设置库文件搜索路径
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/extras/lib)
TARGET_LINK_LIBRARIES(hello helloapi)
